// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Header render correctly if user is authorized 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link header__logo-link--active"
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item user"
              style="display: flex; align-items: baseline;"
            >
              <a
                class="header__nav-link header__nav-link--profile"
                href="/favorites"
              >
                <div
                  class="header__avatar-wrapper user__avatar-wrapper"
                  style="background-image: url(./img/avatar.png);"
                />
                <span
                  class="header__user-name user__name"
                >
                  mail@domain.com
                </span>
              </a>
              <button
                class="header__logout-button button"
                style="margin-left: 10px; width: 18px; height: 18px; background-image: url(../img/logout.svg);"
                type="button"
              />
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;

exports[`Should Header render correctly if user is unauthorized 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link header__logo-link--active"
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item user"
              style="display: flex; align-items: baseline;"
            >
              <a
                class="header__nav-link header__nav-link--profile"
                href="/favorites"
              >
                <div
                  class="header__avatar-wrapper user__avatar-wrapper"
                  style="background-image: url(undefined);"
                />
                <span
                  class="header__user-name user__name"
                >
                  Sign in
                </span>
              </a>
              <button
                class="header__logout-button button"
                style="margin-left: 10px; width: 18px; height: 18px; background-image: url(../img/logout.svg);"
                type="button"
              />
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;
